Agregando botón de volver a encabezado.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
           ></a>
         </div>
       </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver al Encabezado
+      </a>
       <!-- CARDS BANNER ONE  -->
       <section class="cards-banner-one">
         <div class="content">
@@ -175,6 +178,9 @@
           ></a>
         </div>
       </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver al Encabezado
+      </a>
       <!-- CARDS BANNER TWO -->
       <section class="cards-banner-two">
         <div class="content">
@@ -188,6 +194,7 @@
           ></a>
         </div>
       </section>
+
       <section class="social">
         <p>Nuestras Redes Sociales</p>
         <div class="links">
@@ -203,6 +210,7 @@
         </div>
       </section>
     </div>
+
     <div class="footer-links">
       <div class="footer-container">
         <ul>
